[#19398] fix build